--- a/Diamantopoulos_Lab_1.html
+++ b/Diamantopoulos_Lab_1.html
@@ -35,9 +35,7 @@
 
         <h2>Empty Elements</h2>
 
-        <p>Testing a soft line break
-            break, hopefully theres a space</p>
-        <p>Now a hard line break <br/> should do the trick</p>
+        <p>Now a soft line break <br/> should do the trick</p>
         <p>Going to add a horizontal rule now</p>
         <hr/>
 
