--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -42,10 +42,10 @@
         <h2>Images</h2>
 
         <p>Going to now add the images from the folder</p>
-        <img src='client/images/mochi.gif' alt='A dancing Mochi Ball'/>
-        <img src='client/images/mochi.jpg' alt='A Mochi Ball in a bubble'/>
-        <img src='client/images/mochi.png' alt='A Mochi Ball'/>
-        <img src='client/images/mochi.svg' alt='A Mochi Ball'/>
+        <img src='images/mochi.gif' alt='A dancing Mochi Ball'/>
+        <img src='images/mochi.jpg' alt='A Mochi Ball in a bubble'/>
+        <img src='images/mochi.png' alt='A Mochi Ball'/>
+        <img src='images/mochi.svg' alt='A Mochi Ball'/>
         <hr/>
         <a href= 'https://github.com/tdiaman42/INST377-Lab-Work'>GitHub Repo</a>
 
