--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,40 +1,56 @@
-YOUR NAME Lab 3: Flexbox Demo
-
-Selectors
-Main Page
-
-First, the basics.
-
-You need the following to build your website.
-
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teddy Diamantopoulos Lab 3: Flexbox Demo</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h3 class="header_name">Teddy Diamantopoulos Lab 3: Flexbox Demo</h3>
+    <div class="menu-container">
+        <div class="menu">
+            <div class="date">Sep 14, 2021</div>
+            <div class="links">
+                <div class="Database_Demos"> <a href="data.html">Database Demos</a></div>
+                <div class="Main_Page"> <a href="index.html">Main Page</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="header-container">
+        <div class="header">
+            <div class="subscribe">Subscribe &#9662;</div>
+            <div class="logo"><img src="images-2/awesome-logo.svg" alt="logo"></div>
+            <div class="social"><img src="images-2/social-icons.svg" alt="social"></div>
+        </div>
+    </div>
+    <div class="photo-grid-container">
+        <div class="photo-grid">
+            <div class="photo-grid-item">
+                <img src="images-2/five.svg" alt="five">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images-2/two.svg" alt="two">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images-2/three.svg" alt="three">
+            </div>
+        </div>
+    </div>
+    <div class="photo-grid-container">
+        <div class="photo-grid">
+            <div class="photo-grid-item">
+                <img src="images-2/four.svg" alt="four">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images-2/one.svg" alt="one">
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-item footer-one">footer item 1</div>
+        <div class="footer-item footer-two">footer item 2</div>
+        <div class="footer-item footer-three">footer item 3</div>
+    </div>
+</body>
+</html>
