--- a/client/flappy/index.html
+++ b/client/flappy/index.html
@@ -10,6 +10,7 @@
 <body>
 <div class="border-left"></div>
 <div class="game-container">
+    <div class="border-top"></div>
     <div class="sky">
         <div class="bird"></div>
     </div>
