--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -21,7 +21,7 @@
         <div class="header">
             <div class="subscribe">Subscribe &#9662;</div>
             <div class="logo"><img src="images-2/awesome-logo.svg" alt="logo"></div>
-            <div class="social"><img src="images-2/social-icons.svg" alt="social"></div>
+            <div class="social"><a href="https://github.com/tdiaman42">Github Repo</a></div>
         </div>
     </div>
     <div class="photo-grid-container">
