--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
                   <li><a href="./lab_4">Lab 4 - Javascript 1: Make A Carousel</a></li>
                   <li><a href="./doodle">DoodleJump</a></li>
                   <li><a href="./lab_5">Lab 5 - HTML Forms</a></li>
+                  <li><a href="./tetris">Tetris</a></li>
                   <li><a href="./lab_6">Lab 6 - Javascript 2: Browser Events</a></li>
                   <li><a href="./lab_7">Lab 7 - Javascript 3: External Libraries</a></li>
                 </ul>
