--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="p-3">
-    <div class="notification is-warning">
-        Teddy Diamantopoulous Lab 6: Typeahead Entries
-    </div>
+    <div class="notification is-warning">Teddy Diamantopoulous Lab 6: Typeahead Entries</div>
     <div class="columns is-centered is-desktop">
         <div class="column is-3">
             <form action="" class="box" method="" onsubmit="return false;" id="search-form">
@@ -42,7 +40,7 @@
                     <h3 class="title is-3">Restaurant Results</h3>
 
                     <div class="notification is-warning" id="no-results">
-                        No results, try again.
+                        Enter Term in Search Bar
                     </div>
 
                     <div class="table-container">
