--- a/client/lab_7/index.html
+++ b/client/lab_7/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Knapp- Lab 7</title>
+    <title>Teddy Diamantopoulos- Lab 7</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
-                    <h1> Michael Knapp- Lab 7</h1>
+                    <h1> Teddy Diamantopoulos- Lab 7</h1>
                     <form class="search">
                         <label class="label">Search Bar </label>
                         <input type="text" placeholder="PG County Zip" />
